--- a/uimodule/webapp/i18n/i18n_en.properties
+++ b/uimodule/webapp/i18n/i18n_en.properties
@@ -1,3 +1,11 @@
-title=com.infocus.TimeApproval
-appTitle=com.infocus.TimeApproval
+title=TimeSheet Approval
+appTitle=TimeSheet Approval
 appDescription=App Description
+addTimeTitle=Time Entry for 
+checkIn=CheckIn Time
+checkOut=CheckOut Time
+status=Status
+comment=Comment
+date=Regularization Date
+approverName=Approver Name
+comment=Comment
