--- a/uimodule/webapp/i18n/i18n_en.properties
+++ b/uimodule/webapp/i18n/i18n_en.properties
@@ -9,4 +9,4 @@ comment=Comment
 date=Regularization Date
 approverName=Approver Name
 comment=Comment
-dateTime=Date & Time
+dateTime=Reg. Date & Time
