-- Tweaks for mobile view done.

--- a/uimodule/webapp/i18n/i18n_en.properties
+++ b/uimodule/webapp/i18n/i18n_en.properties
@@ -4,6 +4,10 @@ appDescription=App Description
 addTimeTitle=Time Entry for 
 checkIn=CheckIn Time
 checkOut=CheckOut Time
+actualTimeIn=Actual CheckIn Time
+actualTimeOut=Actual CheckOut Time
+status=Status
+
 status=Status
 comment=Comment
 date=Regularization Date
